# rocom

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/wilma/: CMakeLists.txt  Kconfig.projbuild  utils.c  wilma.c  wilma.h
html/: update.html  wifi.html
main/: CMakeLists.txt  class_driver.c  code.js  hashmap.cpp  http.c  http.h  idf_component.yml  kacha.c  kacha.h  linker_fragments.lf  mdns.c  ota-http.c  ota-tftp.c  ota-tftp.h  rfc2217_server.c  rfc2217_server.h  rocom.c  rocom.cpp  serial_port_relay.c  simple-wifi.c  wilma_cgi.c  wilma_cgi.h
